--- a/assets/stylesheets/all.css
+++ b/assets/stylesheets/all.css
@@ -1108,6 +1108,10 @@ main img {
 /* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   /* add code here */
+  /* line 70, ../sass/layout.scss */
+  main .container {
+    top: 15%;
+  }
 }
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
@@ -1116,8 +1120,16 @@ main img {
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
   /* add code here */
+  /* line 85, ../sass/layout.scss */
+  main .container {
+    top: 15%;
+  }
 }
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {
   /* add code here */
+  /* line 95, ../sass/layout.scss */
+  main .container {
+    top: 5%;
+  }
 }
